new uic module to compile from QtDesigner examples in /examples

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,7 @@ encoding//QtRec/QtGui.py=utf-8
 encoding//QtRec/__init__.py=utf-8
 encoding//QtRec/qtRecBase.py=utf-8
 encoding//QtRec/qtRecCore.py=utf-8
-encoding/example1.py=utf-8
+encoding//examples/example1.py=utf-8
+encoding//examples/ui_normal.py=utf-8
+encoding//examples/ui_rec.py=utf-8
 encoding/mySave1.py=utf-8
